# microcbt-api

./: .gitignore  Cargo.toml
migrations/2024-12-04-021111_create_semester/: down.sql  up.sql
migrations/2024-12-04-021112_create_roles/: down.sql  up.sql
migrations/2024-12-04-021224_create_users/: up.sql
migrations/2024-12-04-021226_create_users/: up.sql
migrations/2024-12-04-021533_create_majors/: down.sql  up.sql
migrations/2024-12-04-021534_create_class/: down.sql  up.sql
migrations/2024-12-04-021535_create_students/: down.sql  up.sql
migrations/2024-12-04-023531_create_settings/: down.sql  up.sql
migrations/2024-12-04-024533_create_teachers/: down.sql  up.sql
migrations/2024-12-04-024802_create_subject_groups/: down.sql  up.sql
migrations/2024-12-04-024946_create_subjects/: down.sql  up.sql
migrations/2024-12-04-093142_create_logs/: down.sql  up.sql
migrations/2024-12-04-093252_create_auth_logs/: down.sql  up.sql
resources/: config.yaml
src/: app.rs  logger.rs  main.rs  schema.rs  state.rs
src/config/: config.rs
src/database/: connection.rs
src/dto/authentication/: login.rs
src/entities/: mod.rs
src/entities/authentication/: errors.rs  mod.rs  success.rs
src/enums/: error_codes.rs
src/middlewares/authentication/: mod.rs  structs.rs  verify_token.rs
src/models/: auth_logs.rs  class.rs  majors.rs  mod.rs  roles.rs  semester.rs  settings.rs  students.rs  subject_groups.rs  subjects.rs  users.rs
src/routes/: index.rs  mod.rs
src/routes/authentication/: login.rs  mod.rs  route.rs
src/routes/protected/: index.rs  mod.rs  (+1 more)
(+5 files in other folders)
