[package]
name = "microcbt-api"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.14.0", features = ["yaml"] }
serde = "1.0.215"
axum = "0.7.9"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing-core = "0.1.33"
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
axum-macros = "0.5.0"
file-rotate = "0.7.6"
colored = "2.1.0"
chrono = "0.4.38"
once_cell = "1.20.2"
jsonwebtoken = "9"
validator = { version = "0.19", features = ["derive"] }
password-hash = "0.5.0"
argon2 = "0.5.3"